# sdp-deepseq

./: README.md  sdp-deepseq.cabal
src/Control/DeepSeq/: SDP.hs
