name:          sdp-deepseq
version:       0.2
category:      Data Structures

synopsis:      DeepSeq SDP extension.
description:   Provides NFData instances for SDP structures.

author:        Andrey Mulik
maintainer:    <work.a.mulik@gmail.com>
bug-reports:   https://github.com/andreymulik/sdp-deepseq/issues

copyright:     2019 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

tested-with:
  -- lts-7.24
  GHC == 8.0.1,
  -- lts-9.21
  GHC == 8.0.2,
  -- lts-11.22
  GHC == 8.2.2,
  -- lts-12.26
  GHC == 8.4.4,
  -- lts-18.8
  GHC == 8.10.6

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp-deepseq

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  build-depends:
    base    >= 4.9 && < 5,
    sdp     >= 0.2 && < 1,
    deepseq >= 1.4 && < 1.5
  
  ghc-options: -Wall -Wno-orphans
  
  exposed-modules:
    Control.DeepSeq.SDP

